# sol-usdc-raffle

./: Anchor.toml  README.md  package-lock.json  package.json
programs/solana-usdc-raffle/: Cargo.toml
programs/solana-usdc-raffle/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/solana-usdc-raffle/src/instructions/: buy_tickets.rs  cancel_raffle.rs  claim_prize.rs  complete_raffle.rs  create_raffle.rs  mod.rs  set_winner.rs
programs/solana-usdc-raffle/src/state/: buyers.rs  mod.rs  pool.rs
tests/: solana-usdc-raffle.ts
